--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
         <title>Learning Bootstrap</title>
     </head>
     <body>
-        Hello
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="container">
+                <a href="#" class="navbar-brand">Learning Bootstrap</a>
+                
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="navbar-item">
+                            <a href="#todolist" class="nav-link">Todo List</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
