--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
             <div class="container">
                 <a href="#" class="navbar-brand">Learning Bootstrap</a>
                 
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav">
+                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="menu">
+                    <ul class="navbar-nav ms-auto">
                         <li class="navbar-item">
                             <a href="#todolist" class="nav-link">Todo List</a>
                         </li>
