--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Learning Bootstrap</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
             <div class="container">
                 <a href="#" class="navbar-brand">Learning Bootstrap</a>
                 
@@ -21,10 +21,36 @@
                         <li class="navbar-item">
                             <a href="#todolist" class="nav-link">Todo List</a>
                         </li>
+                        <li class="navbar-item">
+                            <a href="#aboutjordan" class="nav-link">About Jordan</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+        <section class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>Jordan's Webpage</h1>
+                        <p>A great guy, if I do say so myself. Likes learning wisdom.</p>
+                        <button class="btn btn-primary btn-lg">About Jordan</button>
+                    </div>
+                    <img class="img-fluid w-25 d-none d-md-block" src="img/Jordan21ProfilePic.JPG" alt="A Profile Picture of Jordan">
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-primary text-light p-5">
+            <div class="container">
+                <div class="d-md-flex justify-content-between align-items-center">
+                    <h3 class="mb-3 mb-md-0">
+                        Request a meeting!
+                    </h3>
+                </div>
+            </div>
+        </section>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
