--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             </div>
         </section>
 
+        <a href="justdoit/justdoitstart.html" class="btn btn-primary">Just Do It</a>
+
         <section class="bg-primary text-light p-5">
             <div class="container">
                 <div class="d-md-flex justify-content-between align-items-center">
