--- a/justdoit/justdoitstart.html
+++ b/justdoit/justdoitstart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    
+    <script src="script_justdoit.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -43,7 +43,7 @@
         </div>
     </section>
     
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -57,7 +57,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
