Add button Id's

--- a/justdoit/justdoitstart.html
+++ b/justdoit/justdoitstart.html
@@ -15,7 +15,7 @@
                 <div>
                     <h1>Just Do It</h1>
                     <p>Go through step by step.</p>
-                    <button class="btn btn-primary btn-lg">Start</button>
+                    <button id="button_start" class="btn btn-primary btn-lg">Start</button>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
                     <h1>What is the best thing to do right now?</h1>
                     <textarea></textarea>
                     <br>
-                    <button class="btn btn-primary btn-lg">Submit</button>
+                    <button id="button_submit_goal" class="btn btn-primary btn-lg">Submit</button>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
                     <h1>How do you feel?</h1>
-                    <button class="btn btn-primary btn-lg">Next</button>
+                    <button id="button_next_mindfulness" class="btn btn-primary btn-lg">Next</button>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
                     <br>
                     <p>What? <textarea></textarea></p>
                     <br>
-                    <button class="btn btn-primary btn-lg">Submit</button>
+                    <button id="button_submit_objective" class="btn btn-primary btn-lg">Submit</button>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <div>
                     <h1>0:00</h1>
                     <button>Play/Pause</button>
-                    <button class="btn btn-primary btn-lg">Next</button>
+                    <button id="button_Next_done" class="btn btn-primary btn-lg">Next</button>
                 </div>
             </div>
         </div>
