--- a/justdoit/justdoitstart.html
+++ b/justdoit/justdoitstart.html
@@ -15,7 +15,7 @@
                 <div>
                     <h1>Just Do It</h1>
                     <p>Go through step by step.</p>
-                    <button id="button_start" class="btn btn-primary btn-lg">Start</button>
+                    <button id="button_start" onclick="buttonStart()" class="btn btn-primary btn-lg">Start</button>
                 </div>
             </div>
         </div>
