--- a/justdoit/justdoitstart.html
+++ b/justdoit/justdoitstart.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section id="section_start" class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -20,7 +20,7 @@
             </div>
         </div>
     </section>
-    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section id="section_goal" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </section>
-    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section id="section_mindfulness" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -43,7 +43,7 @@
         </div>
     </section>
     
-    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section id="section_objective" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -57,7 +57,7 @@
             </div>
         </div>
     </section>
-    <section class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+    <section id="section_done" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
