--- a/justdoit/justdoitstart.html
+++ b/justdoit/justdoitstart.html
@@ -9,61 +9,71 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="section_start" class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div>
-                    <h1>Just Do It</h1>
-                    <p>Go through step by step.</p>
-                    <button id="button_start" onclick="buttonStart()" class="btn btn-primary btn-lg">Start</button>
+    <section id="section_start">
+        <div class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>Just Do It</h1>
+                        <p>Go through step by step.</p>
+                        <button id="button_start" onclick="buttonStart()" class="btn btn-primary btn-lg">Start</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="section_goal" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div>
-                    <h1>What is the best thing to do right now?</h1>
-                    <textarea></textarea>
-                    <br>
-                    <button id="button_submit_goal" class="btn btn-primary btn-lg">Submit</button>
+    <section id="section_goal">
+        <div class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>What is the best thing to do right now?</h1>
+                        <textarea></textarea>
+                        <br>
+                        <button id="button_submit_goal" onclick="buttonSubmitGoal()" class="btn btn-primary btn-lg">Submit</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="section_mindfulness" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div>
-                    <h1>How do you feel?</h1>
-                    <button id="button_next_mindfulness" class="btn btn-primary btn-lg">Next</button>
+    <section id="section_mindfulness">
+        <div class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>How do you feel?</h1>
+                        <button id="button_next_mindfulness" onclick="buttonNextMindfulness()" class="btn btn-primary btn-lg">Next</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     
-    <section id="section_objective" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div>
-                    <h1>What is the next tactile step towards ___ that is under a minute</h1>
-                    <p>Where? <textarea></textarea></p>
-                    <br>
-                    <p>What? <textarea></textarea></p>
-                    <br>
-                    <button id="button_submit_objective" class="btn btn-primary btn-lg">Submit</button>
+    <section id="section_objective">
+        <div class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>What is the next tactile step towards ___ that is under a minute</h1>
+                        <p>Where? <textarea></textarea></p>
+                        <br>
+                        <p>What? <textarea></textarea></p>
+                        <br>
+                        <button id="button_submit_objective" onclick="buttonsubmitObjective()" class="btn btn-primary btn-lg">Submit</button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="section_done" class="d-none bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
-        <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div>
-                    <h1>0:00</h1>
-                    <button>Play/Pause</button>
-                    <button id="button_Next_done" class="btn btn-primary btn-lg">Next</button>
+    <section id="section_done">
+        <div class="bg-dark text-light p-5 p-lg-0 pt-lg-0 text-center text-sm-start">
+            <div class="container">
+                <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                        <h1>0:00</h1>
+                        <button>Play/Pause</button>
+                        <button id="button_Next_done" onclick="buttonNextDone()" class="btn btn-primary btn-lg">Next</button>
+                    </div>
                 </div>
             </div>
         </div>
